<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="stephenfahy.com.mobileprojectvotingapplication.MainActivity">

    <TextView
        android:id="@+id/statistics_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/statistics_menu"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/age_political_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_politicalparty" />

        <Button
            android:id="@+id/age_gender_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="STATISTICS BASED ON GENDER, AREA, PAY" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/election"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/election_picture"
            android:scaleType="fitXY"
            android:src="@drawable/election" />
    </LinearLayout>
</RelativeLayout>
